syntax = "proto3";

option csharp_namespace = "PulseApp.Protos";

import "google/protobuf/timestamp.proto";

package common;

message EmptyRequest {

}

message EmptyResponse {

}

message IdRequest {
	int32 id = 1;
}

message IdResponse {
	int32 id = 1;
}

message YearMonthRequest {
	int32 year = 1;
	int32 month = 2;
}

message DateRangeRequest {
    google.protobuf.Timestamp start_date = 1;
    google.protobuf.Timestamp end_date = 2;
}

message DateRequest {
	google.protobuf.Timestamp date = 1;
}

message DaysResponse {
	repeated int32 days = 1;
}

message DatesResponse {
    repeated google.protobuf.Timestamp dates = 1;
}
